--- a/css/pages/_createPet.scss
+++ b/css/pages/_createPet.scss
@@ -1,4 +1,21 @@
-.create-pet-form {
+.create-pet-form{
+
+    background-color: var(--porsche);
+    position: relative;
+    margin-right: auto;
+    margin-left: auto;
+    padding-bottom: 6em;
+
+    .pet-body{
+        background-color:white;
+        border-radius: 15px;
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 2em;
+        padding-bottom: 4em;
+    }
+
     .josefinsans-normal-chetwode-blue-20px {
         color: var(--chetwode-blue);
         font-family: "Josefin Sans";
@@ -6,8 +23,15 @@
         font-style: normal;
         font-weight: 400;
     }
-}
 
+    form{
+        width: 80%;
+
+        ::placeholder{
+            color: var(--chetwode-blue)
+        }
+    }
+}
 
 .button-p {
     background-color: var(--porsche);
