--- a/css/pages/_detailPet.scss
+++ b/css/pages/_detailPet.scss
@@ -16,6 +16,8 @@
         position: relative;
         top: 1em;
         box-shadow: 0px -5px -5px rgba(0, 0, 0, 0.1);
+        margin-right: auto;
+        margin-left: auto;
         // Acomodar responsivo.
     }
 
@@ -29,8 +31,9 @@
         background-color: white;
         border-radius: 15px;
         position: relative;
-        top: -1em;
         box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.1);
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .user-actions{
