--- a/css/pages/_formShelter.scss
+++ b/css/pages/_formShelter.scss
@@ -1,6 +1,21 @@
-//Form
-
 .shelter-form{
+
+    background-color: var(--porsche);
+    position: relative;
+    margin-right: auto;
+    margin-left: auto;
+    padding-bottom: 6em;
+
+    .shelter-body{
+        background-color:white;
+        border-radius: 15px;
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 2em;
+        padding-bottom: 4em;
+    }
+
     .josefinsans-normal-chetwode-blue-20px {
         color: var(--chetwode-blue);
         font-family: "Josefin Sans";
@@ -10,23 +25,10 @@
     }
 
     form{
+        width: 80%;
+
         ::placeholder{
             color: var(--chetwode-blue)
         }
     }
-}
-
-.josefinsans-medium-chetwode-blue-14px{
-    font-family: Josefin Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 14px;
-    color: var(--chetwode-blue);
-}
-
-:root {
-    --chetwode-blue: rgba(118, 126, 237, 1);
-    --white-lilac: rgb(24, 38, 95);
-    --porsche: rgba(236, 163, 107, 1);
 }
