--- a/css/pages/_formUser.scss
+++ b/css/pages/_formUser.scss
@@ -1,4 +1,21 @@
 .user-form{
+
+    background-color: var(--porsche);
+    position: relative;
+    margin-right: auto;
+    margin-left: auto;
+    padding-bottom: 6em;
+
+    .user-body{
+        background-color:white;
+        border-radius: 15px;
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 2em;
+        padding-bottom: 4em;
+    }
+
     .josefinsans-normal-chetwode-blue-20px {
         color: var(--chetwode-blue);
         font-family: "Josefin Sans";
@@ -8,6 +25,8 @@
     }
 
     form{
+        width: 80%;
+
         ::placeholder{
             color: var(--chetwode-blue)
         }
