--- a/css/pages/_signUpShelter.scss
+++ b/css/pages/_signUpShelter.scss
@@ -198,3 +198,51 @@
 :root {
     --porsche: rgba(236, 163, 107, 1);
 }
+
+
+.sign-up-form{
+
+    a {
+        text-decoration: none;
+        position: relative;
+        left: 80%;
+    }
+
+    .title {
+        position: relative;
+        padding-top: 3em;
+        text-align: center;
+    }
+
+    background-color: var(--porsche);
+    position: relative;
+    margin-right: auto;
+    margin-left: auto;
+    padding-bottom: 6em;
+
+    .sign-up-body{
+        background-color:white;
+        border-radius: 15px;
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 2em;
+        padding-bottom: 4em;
+    }
+
+    .josefinsans-normal-chetwode-blue-20px {
+        color: var(--chetwode-blue);
+        font-family: "Josefin Sans";
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+    }
+
+    form{
+        width: 80%;
+
+        ::placeholder{
+            color: var(--chetwode-blue)
+        }
+    }
+}
