--- a/css/pages/_logInUser.scss
+++ b/css/pages/_logInUser.scss
@@ -4,3 +4,12 @@
         color: red;
     }
 }
+
+.log-in-form{
+    .log-in-body{
+        a{
+            margin-left: -2em;
+        }
+    }
+}
+
