--- a/css/pages/_logInShelter.scss
+++ b/css/pages/_logInShelter.scss
@@ -16,7 +16,21 @@
     position: relative;
     margin-right: auto;
     margin-left: auto;
-    padding-bottom: 6em;
+    height: 100vh;
+
+    .border-2px-chetwode-blue {
+        border: 2px solid var(--chetwode-blue);
+    }
+    
+    .overlap-group {
+        align-items: flex-start;
+        background-color: var(--white-lilac);
+        border-radius: 16px;
+        display: flex;
+        height: 40px;
+        margin-bottom: -0.91px;
+        padding: 11px 22px;
+    }
 
     .log-in-body{
         background-color:white;
@@ -28,10 +42,10 @@
         padding-bottom: 4em;
     }
 
-    .josefinsans-normal-chetwode-blue-20px {
+    .josefinsans-normal-chetwode-blue-16px {
         color: var(--chetwode-blue);
-        font-family: "Josefin Sans";
-        font-size: 20px;
+        font-family: "Josefin Sans",sans-serif;
+        font-size: 16px;
         font-style: normal;
         font-weight: 400;
     }
@@ -43,11 +57,8 @@
             color: var(--chetwode-blue)
         }
     }
-}
 
-//Button
-
-.button-primary {
+    .button-primary {
     align-items: center;
     background-color: var(--porsche);
     border-radius: 15px;
@@ -59,7 +70,6 @@
     display: block;
     margin-top: 1em;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-    // border-radius: 15px;
 
     .button-p {
         letter-spacing: 0px;
@@ -70,9 +80,10 @@
 
     .josefinsans-normal-white-20px {
         color: white;
-        font-family: "Josefin Sans";
+        font-family: "Josefin Sans",sans-serif;
         font-size: 20px;
         font-style: normal;
         font-weight: 400;
     }
+}
 }
