--- a/css/pages/_detailPet.scss
+++ b/css/pages/_detailPet.scss
@@ -1,31 +1,8 @@
 // Detail pet
 
-.detail-pet{
-    background-color:var(--porsche);
-    padding-bottom: 5em;
-    margin-left: auto;
-    margin-right: auto;
 
-    .arrow-left{
-        position: absolute;
-        top: 2em;
-        left: 2em;
-    }
-
-    .image-pet{
-        position: relative;
-        top: 1em;
-        box-shadow: 0px -5px -5px rgba(0, 0, 0, 0.1);
-        margin-right: auto;
-        margin-left: auto;
-        // Acomodar responsivo.
-    }
-
-    h2{
-        padding-top: 1.5em;
-        padding-bottom: 0.5em;
-        padding-left: 15%;
-    }
+.pet-view {
+    background-color: var(--chetwode-blue);
 
     .rectangle-background {
         background-color: white;
@@ -36,50 +13,94 @@
         margin-right: auto;
     }
 
-    .user-actions{
-        padding-top: 4em;
+    .detail-pet {
+        background-size: cover;
+        border-radius: 15px;
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto;
 
-        .button-main{
-            justify-content: center;
-            height: 64px;
+        .arrow-left {
+            position: relative;
+            right: 12em;
+            top: 4em;
         }
-    }
 
-    .info-shelter{
+        .image-pet {
+            position: relative;
+            box-shadow: 0px -5px -5px rgba(0, 0, 0, 0.1);
+            margin-right: auto;
+            margin-left: auto;
+            margin-top: auto;
+            margin-bottom: auto;
+            object-fit: cover;
 
-        margin-left: auto;
-        margin-right: auto;
-
-        a{
-            text-decoration: none;
-            color: black;
-
-            img{
-                border-radius: 100px;
+            img {
+                border-radius: 15px;
+                width: 40vw;
+                min-width: 35em;
+                height: auto;
             }
         }
 
-        .text-shelter{
-            padding-left: 1em;
+        .info-pet {
+            width: 50vw;
+        }
+
+        h2 {
+            padding-top: 1em;
+            padding-bottom: 0.5em;
+            padding-left: 15%;
+        }
+
+        .josefinsans-normal-black-30px {
+            color: black;
+            font-family: var(--font-family-josefin_sans);
+            font-size: 35px;
+            font-style: normal;
+            font-weight: 400;
+        }
+
+        .josefinsans-chetwode-blue-18px {
+            color: var(--chetwode-blue);
+            font-family: "Josefin Sans";
+            font-size: 18px;
+            font-weight: 700;
+            letter-spacing: 0px;
+            min-height: 12px;
+            width: 54px;
         }
     }
 
-    .josefinsans-normal-black-30px {
-        color: black;
-        font-family: var(--font-family-josefin_sans);
-        font-size: 35px;
-        font-style: normal;
-        font-weight: 400;
-    }
+    .pet-actions {
+        position: relative;
+        top: 3em;
+        grid-template-columns: auto auto;
 
-    .josefinsans-chetwode-blue-18px {
-        color: var(--chetwode-blue);
-        font-family: "Josefin Sans";
-        font-size: 18px;
-        font-weight: 700;
-        letter-spacing: 0px;
-        min-height: 12px;
-        width: 54px;
+        .button-main {
+            justify-content: center;
+            height: 64px;
+        }
+
+        .shelter-text {
+            text-align: start;
+            margin-bottom: 3em;
+            margin-right: auto;
+            margin-left: auto;
+
+            a {
+                text-decoration: none;
+                color: black;
+
+                img {
+                    border-radius: 100px;
+                }
+            }
+
+            .text-shelter {
+                padding-left: 1em;
+            }
+
+        }
     }
 }
 
