--- a/css/pages/_detailPet.scss
+++ b/css/pages/_detailPet.scss
@@ -1,63 +1,59 @@
-// Detail pet
+.detail-pet{
+    background-color: var(--porsche);
+    padding-bottom: 5em;
 
-
-.pet-view {
-    background-color: var(--chetwode-blue);
-
-    .rectangle-background {
+    .rectangle-background{
         background-color: white;
         border-radius: 15px;
-        position: relative;
-        box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.1);
-        margin-left: auto;
-        margin-right: auto;
-    }
+        margin-top: 10em;
 
-    .detail-pet {
-        background-size: cover;
-        border-radius: 15px;
-        grid-template-columns: auto auto;
-        grid-template-rows: auto auto;
-
-        .arrow-left {
+        .detail-top{
             position: relative;
-            right: 12em;
-            top: 4em;
-        }
+            top: -8em;
+            display: flex;
+            justify-content: center;
 
-        .image-pet {
-            position: relative;
-            box-shadow: 0px -5px -5px rgba(0, 0, 0, 0.1);
-            margin-right: auto;
-            margin-left: auto;
-            margin-top: auto;
-            margin-bottom: auto;
-            object-fit: cover;
-
-            img {
+            .pet-image {
                 border-radius: 15px;
-                width: 40vw;
-                min-width: 35em;
-                height: auto;
+                border: 8px solid white;
             }
         }
 
-        .info-pet {
-            width: 50vw;
+        .user-actions{
+    
+            .button-main{
+                justify-content: center;
+                height: 64px;
+            }
         }
 
-        h2 {
-            padding-top: 1em;
-            padding-bottom: 0.5em;
-            padding-left: 15%;
+        .info-pet{
+            position: relative;
+            top:-5em;
+
+            .edit{
+                position: relative;
+                left: 80%;
+            }
         }
 
-        .josefinsans-normal-black-30px {
-            color: black;
-            font-family: var(--font-family-josefin_sans);
-            font-size: 35px;
-            font-style: normal;
-            font-weight: 400;
+        .info-shelter{
+
+            margin-left: auto;
+            margin-right: auto;
+    
+            a{
+                text-decoration: none;
+                color: black;
+    
+                img{
+                    border-radius:6em;
+                }
+            }
+    
+            .text-shelter{
+                padding-left: 1em;
+            }
         }
 
         .josefinsans-chetwode-blue-18px {
@@ -70,42 +66,4 @@
             width: 54px;
         }
     }
-
-    .pet-actions {
-        position: relative;
-        top: 3em;
-        grid-template-columns: auto auto;
-
-        .button-main {
-            justify-content: center;
-            height: 64px;
-        }
-
-        .shelter-text {
-            text-align: start;
-            margin-bottom: 3em;
-            margin-right: auto;
-            margin-left: auto;
-
-            a {
-                text-decoration: none;
-                color: black;
-
-                img {
-                    border-radius: 100px;
-                }
-            }
-
-            .text-shelter {
-                padding-left: 1em;
-            }
-
-        }
-    }
-}
-
-:root {
-    --chetwode-blue: rgba(118, 126, 237, 1);
-    --white-lilac: rgba(246, 247, 251, 1);
-    --porsche: rgba(236, 163, 107, 1);
 }
