--- a/css/style.css
+++ b/css/style.css
@@ -825,73 +825,69 @@ collapsible:hover .arrow-white {
           justify-content: center;
 }
 
-.pet-view {
-  background-color: var(--chetwode-blue);
+.detail-pet {
+  background-color: var(--porsche);
+  padding-bottom: 5em;
 }
 
-.pet-view .rectangle-background {
+.detail-pet .rectangle-background {
   background-color: white;
   border-radius: 15px;
+  margin-top: 10em;
+}
+
+.detail-pet .rectangle-background .detail-top {
   position: relative;
-  -webkit-box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.1);
+  top: -8em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.detail-pet .rectangle-background .detail-top .pet-image {
+  border-radius: 15px;
+  border: 8px solid white;
+}
+
+.detail-pet .rectangle-background .user-actions .button-main {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 64px;
+}
+
+.detail-pet .rectangle-background .info-pet {
+  position: relative;
+  top: -5em;
+}
+
+.detail-pet .rectangle-background .info-pet .edit {
+  position: relative;
+  left: 80%;
+}
+
+.detail-pet .rectangle-background .info-shelter {
   margin-left: auto;
   margin-right: auto;
 }
 
-.pet-view .detail-pet {
-  background-size: cover;
-  border-radius: 15px;
-  -ms-grid-columns: auto auto;
-      grid-template-columns: auto auto;
-  -ms-grid-rows: auto auto;
-      grid-template-rows: auto auto;
-}
-
-.pet-view .detail-pet .arrow-left {
-  position: relative;
-  right: 12em;
-  top: 4em;
-}
-
-.pet-view .detail-pet .image-pet {
-  position: relative;
-  -webkit-box-shadow: 0px -5px -5px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px -5px -5px rgba(0, 0, 0, 0.1);
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: auto;
-  margin-bottom: auto;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.pet-view .detail-pet .image-pet img {
-  border-radius: 15px;
-  width: 40vw;
-  min-width: 35em;
-  height: auto;
-}
-
-.pet-view .detail-pet .info-pet {
-  width: 50vw;
-}
-
-.pet-view .detail-pet h2 {
-  padding-top: 1em;
-  padding-bottom: 0.5em;
-  padding-left: 15%;
-}
-
-.pet-view .detail-pet .josefinsans-normal-black-30px {
+.detail-pet .rectangle-background .info-shelter a {
+  text-decoration: none;
   color: black;
-  font-family: var(--font-family-josefin_sans);
-  font-size: 35px;
-  font-style: normal;
-  font-weight: 400;
 }
 
-.pet-view .detail-pet .josefinsans-chetwode-blue-18px {
+.detail-pet .rectangle-background .info-shelter a img {
+  border-radius: 6em;
+}
+
+.detail-pet .rectangle-background .info-shelter .text-shelter {
+  padding-left: 1em;
+}
+
+.detail-pet .rectangle-background .josefinsans-chetwode-blue-18px {
   color: var(--chetwode-blue);
   font-family: "Josefin Sans";
   font-size: 18px;
@@ -901,50 +897,10 @@ collapsible:hover .arrow-white {
   width: 54px;
 }
 
-.pet-view .pet-actions {
-  position: relative;
-  top: 3em;
-  -ms-grid-columns: auto auto;
-      grid-template-columns: auto auto;
-}
-
-.pet-view .pet-actions .button-main {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  height: 64px;
-}
-
-.pet-view .pet-actions .shelter-text {
-  text-align: start;
-  margin-bottom: 3em;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.pet-view .pet-actions .shelter-text a {
-  text-decoration: none;
-  color: black;
-}
-
-.pet-view .pet-actions .shelter-text a img {
-  border-radius: 100px;
-}
-
-.pet-view .pet-actions .shelter-text .text-shelter {
-  padding-left: 1em;
-}
-
-:root {
-  --chetwode-blue: rgba(118, 126, 237, 1);
-  --white-lilac: rgba(246, 247, 251, 1);
-  --porsche: rgba(236, 163, 107, 1);
-}
-
 .detail-pet .edit {
   position: absolute;
   right: 3em;
-  top: 2em;
+  top: -3em;
 }
 
 .detail-pet a {
