--- a/css/pages/_searchPet.scss
+++ b/css/pages/_searchPet.scss
@@ -17,13 +17,13 @@
 
 //Filter options
 
-.filter-options{
+.filter-options {
 
-    a{
+    a {
         text-decoration: none;
     }
 
-    .button-filter{
+    .button-filter {
         display: flex;
         align-items: center;
         background-color: white;
@@ -36,12 +36,17 @@
         box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
         // Acomodar modo responsivo en pantalla pequeña.
 
-        img{
+        img {
             padding-right: 1em;
         }
     }
 
-    .pet-tag{
+    .rectangle-background {
+        border-radius: 15px;
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    }
+
+    .pet-tag {
         background-color: var(--chetwode-blue);
         border-radius: 15px;
         height: 40px;
@@ -51,11 +56,12 @@
         width: 10em;
         box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 
-        .text-tag{
+        .text-tag {
             margin-top: auto;
             margin-bottom: auto;
             padding-right: 1em;
         }
+
         .josefinsans-normal-white-16px {
             color: var(--white);
             font-family: var(--font-family-josefin_sans);
@@ -65,13 +71,25 @@
         }
     }
 
-    .delete-all{
+    .delete-all {
         background-color: white;
         border: white;
         color: var(--chetwode-blue);
         font-weight: 600;
     }
+
+    .josefinsans-semi-bold-chetwode-blue-16px {
+        color: var(--chetwode-blue);
+        font-family: var(--font-family-josefin_sans);
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 600;
+    }
 }
+
+//Filter input
+
+
 
 //Pet cards
 
@@ -124,7 +142,7 @@
     width: 90%;
 
 
-    a{
+    a {
         text-decoration: none;
     }
 
@@ -173,6 +191,86 @@
         font-style: normal;
         font-weight: 400;
     }
+}
+
+//Filter container
+
+//Filter toggle
+
+.container-filter {
+    label.switch {
+        text-align: left;
+        width: 50px;
+        height: calc(50px / 2);
+        border-radius: 60px;
+        background-color: var(--chetwode-blue);
+        display: inline-block;
+        position: relative;
+        cursor: pointer;
+    }
+
+    label.switch>span {
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
+
+    label.switch>input[type="checkbox"] {
+        opacity: 0;
+        position: absolute;
+    }
+
+    label.switch>span:before,
+    label.switch>span:after {
+        content: "";
+        cursor: pointer;
+        position: absolute;
+    }
+
+    label.switch>input[type="checkbox"]:focus~span {
+        box-shadow: 0 0 0 4px var(--chetwode-blue);
+    }
+
+    label.switch>input[type="checkbox"]:checked:focus~span {
+        box-shadow: 0 0 0 4px #fff;
+    }
+
+    label.switch>span {
+        border-radius: 60px;
+    }
+
+    label.switch>span:before {
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
+        background-color: #f1f1f1;
+        border-radius: 60px;
+        transition: opacity .2s ease-out .1s, transform .2s ease-out .1s;
+        transform: scale(1);
+        opacity: 1;
+    }
+
+    label.switch>span:after {
+        top: 50%;
+        z-index: 3;
+        transition: transform .4s cubic-bezier(0.44, -0.12, 0.07, 1.15);
+        width: calc(50px / 2);
+        height: calc(50px / 2);
+        transform: translate3d(0, -50%, 0);
+        background-color: #fff;
+        border-radius: 100%;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
+    }
+
+    label.switch>input[type="checkbox"]:checked~span:before {
+        transform: scale(0);
+        opacity: .7;
+    }
+
+    label.switch>input[type="checkbox"]:checked~span:after {
+        transform: translate3d(100%, -50%, 0);
+    }
+
 }
 
 :root {
