--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans:700");
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans:700");
-@import url("https://fonts.googleapis.com/css?family=Josefin+Sans:400|Quicksand:400");
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans:400,600|Quicksand:400,500");
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans:400");
 :root {
@@ -335,6 +334,130 @@ footer .quicksand-normal-white-10px {
   font-weight: 400;
 }
 
+.form-base {
+  background-color: var(--porsche);
+  position: relative;
+  margin-right: auto;
+  margin-left: auto;
+  padding-bottom: 6em;
+}
+
+.form-base .adoption-body {
+  background-color: white;
+  border-radius: 15px;
+  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2em;
+  padding-bottom: 4em;
+}
+
+.form-base .title {
+  position: relative;
+  padding-top: 2em;
+}
+
+.form-base .title .josefinsans-normal-black-30px {
+  color: black;
+  font-family: "Josefin Sans";
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.form-base .base-form {
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+}
+
+.form-base label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.form-base .overlap-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: var(--white-lilac);
+  border-radius: 15px;
+  height: 40px;
+}
+
+.form-base .overlap-group .input-base {
+  min-height: 16px;
+}
+
+.form-base .overlap-group .border-2px-chetwode-blue {
+  border: 2px solid var(--chetwode-blue);
+}
+
+.form-base .checkbox-form label {
+  padding-left: 2em;
+}
+
+.form-base .josefinsans-normal-chetwode-blue-16px {
+  color: var(--chetwode-blue);
+  font-family: "Josefin Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.form-base .josefinsans-normal-chetwode-blue-20px {
+  color: var(--chetwode-blue);
+  font-family: "Josefin Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.button-primary {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: var(--porsche);
+  border-radius: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 55px;
+  overflow: hidden;
+  width: 343px;
+  display: block;
+  margin-top: 1em;
+  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  border-color: var(--porsche);
+  border: none;
+}
+
+.button-primary .button-p {
+  letter-spacing: 0px;
+  min-height: 20px;
+  min-width: 61px;
+  text-align: center;
+}
+
+.button-primary .josefinsans-normal-white-20px {
+  color: white;
+  font-family: "Josefin Sans";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+}
+
 header a {
   text-decoration: none;
 }
@@ -527,136 +650,6 @@ header button {
   position: relative;
   left: 85%;
   top: 1em;
-}
-
-.adoption-form {
-  background-color: var(--porsche);
-  position: relative;
-  margin-right: auto;
-  margin-left: auto;
-  padding-bottom: 6em;
-}
-
-.adoption-form .adoption-body {
-  background-color: white;
-  border-radius: 15px;
-  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 2em;
-  padding-bottom: 4em;
-}
-
-.adoption-form .title {
-  position: relative;
-  padding-top: 2em;
-}
-
-.adoption-form .title .josefinsans-normal-black-30px {
-  color: black;
-  font-family: "Josefin Sans";
-  font-size: 30px;
-  font-style: normal;
-  font-weight: 400;
-}
-
-.adoption-form .base-form {
-  margin-left: auto;
-  margin-right: auto;
-  width: 80%;
-}
-
-.adoption-form label {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-}
-
-.adoption-form .overlap-group {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: var(--white-lilac);
-  border-radius: 15px;
-  height: 40px;
-}
-
-.adoption-form .overlap-group .input-base {
-  min-height: 16px;
-}
-
-.adoption-form .overlap-group .border-2px-chetwode-blue {
-  border: 2px solid var(--chetwode-blue);
-}
-
-.adoption-form .checkbox-form label {
-  padding-left: 2em;
-}
-
-.adoption-form .josefinsans-normal-chetwode-blue-16px {
-  color: var(--chetwode-blue);
-  font-family: "Josefin Sans";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-}
-
-.adoption-form .josefinsans-normal-chetwode-blue-20px {
-  color: var(--chetwode-blue);
-  font-family: "Josefin Sans";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-}
-
-.button-primary {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: var(--porsche);
-  border-radius: 15px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 55px;
-  overflow: hidden;
-  width: 343px;
-  display: block;
-  margin-top: 1em;
-  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-  border-color: var(--porsche);
-  border: none;
-}
-
-.button-primary .button-p {
-  letter-spacing: 0px;
-  min-height: 20px;
-  min-width: 61px;
-  text-align: center;
-}
-
-.button-primary .josefinsans-normal-white-20px {
-  color: white;
-  font-family: "Josefin Sans";
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-}
-
-:root {
-  --chetwode-blue: rgba(118, 126, 237, 1);
-  --white-lilac: rgba(246, 247, 251, 1);
-  --porsche: rgba(236, 163, 107, 1);
 }
 
 .top-adoption {
