--- a/css/pages/_createPet.scss
+++ b/css/pages/_createPet.scss
@@ -1,4 +1,4 @@
-.create-pet-form{
+.create-pet-form {
 
     background-color: var(--porsche);
     position: relative;
@@ -6,8 +6,8 @@
     margin-left: auto;
     padding-bottom: 6em;
 
-    .pet-body{
-        background-color:white;
+    .pet-body {
+        background-color: white;
         border-radius: 15px;
         box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
         margin-left: auto;
@@ -24,10 +24,19 @@
         font-weight: 400;
     }
 
-    form{
+    form {
         width: 80%;
 
-        ::placeholder{
+        .option-base {
+            border-radius: 10em;
+            height: 40px;
+            color: var(--chetwode-blue);
+            background-color: var(--white-lilac);
+            border: 2px solid var(--chetwode-blue);
+            font-family: "Josefin Sans";
+        }
+
+        ::placeholder {
             color: var(--chetwode-blue)
         }
     }
